--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="about">
-    <img src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg">
+    <img src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg" alt="about">
     <div class="aboutWrapper">
       <div class="me">
         <h3 class=subHeader>Who Am I?</h3>
@@ -82,60 +82,60 @@
   </div>
 
   <div class="portfolio">
-    <img src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg">
+    <img src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg" alt="portfolio">
     <div class="portfolioGrid">
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg" alt="lumbar yard">
         <p class="text">E-commerce site for mattress company, The Lumbar Yard.  The site allows users to search for and buy mattresses with any major credit card.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Express.js</p>
         <div className="buttonWrapper">
-          <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/lumbarYard" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/lumbarYard" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, Google Maps API</p>
         <div className="buttonWrapper">
-          <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg" alt="hans boathouse">
         <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Responsive layout created with CSS Grid.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
-          <a href="/projects/hansboathouse/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="/projects/hansboathouse/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
         <div className="buttonWrapper">
-          <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
         <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg" alt="retro youtube tv">
         <p class="text">Want to channel surf with YouTube videos? Now you can with the Retro YouTube Television! Each channel plays a different category of video. Check the channel guide for complete lineup.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
         <div className="buttonWrapper">
-          <a href="/projects/retroyoutube/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg">
+        <img src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
         <p class="text">Allows you to see all of the lastest news in one place. The dynamic newspaper will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
-          <a href="/projects/newspaper/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
+          <a href="/projects/newspaper/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
     </div>
@@ -143,19 +143,19 @@
   </div>
 
   <div class="contact">
-    <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg">
+    <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg" alt="contact">
     <div class="contactWrapper">
       <div class="contactText">Find me at the following places:</div>
       <div class="contactIcons">
-        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="githubIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/github.png"></a>
-        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="codepenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/codepen.png"></a>
-        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="twitterIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/twitter.png"></a>
-        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png"></a>
+        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="githubIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/github.png" alt="github"></a>
+        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="codepenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/codepen.png" alt="codepen"></a>
+        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="twitterIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/twitter.png" alt="twitter"></a>
+        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
       </div>
       <div class="contactText">Reach me at:</div>
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
-    <img class="arrow" src="https://www.jarrodyellets.com/images/arrow.png">
+    <img class="arrow" src="https://www.jarrodyellets.com/images/arrow.png" alt="arrow">
   </div>
 
   <footer>
