--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB. I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive. When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
           </p>
         </div>
       </div>
       <div class="stack">
-        <h3 class="subHeader">What I Use</h3>
+        <h3 class="subHeader">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
             <div class="stackText">HTML5</div>
@@ -95,7 +95,7 @@
       </div>
       <div class="portfolioItem">
         <img src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
-        <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com</p>
+        <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, Google Maps API</p>
         <div className="buttonWrapper">
@@ -115,7 +115,7 @@
         <img src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js,  and Spotify API</p>
         <div className="buttonWrapper">
           <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
