Fixed typos in portfolio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, Google Maps API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, and Google Maps API</p>
         <div className="buttonWrapper">
           <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
@@ -115,7 +115,7 @@
         <img src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js,  and Spotify API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
         <div className="buttonWrapper">
           <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
@@ -124,7 +124,7 @@
         <img src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg" alt="retro youtube tv">
         <p class="text">Want to channel surf with YouTube videos? Now you can with the Retro YouTube Television! Each channel plays a different category of video. Check the channel guide for complete lineup.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and YouTube API</p>
         <div className="buttonWrapper">
           <a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
@@ -133,7 +133,7 @@
         <img src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
         <p class="text">Allows you to see all of the lastest news in one place. The dynamic newspaper will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, and jQuery</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and News API</p>
         <div className="buttonWrapper">
           <a href="/projects/newspaper/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
