--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="about">
-    <img src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg" alt="about">
+    <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg" alt="about">
     <div class="aboutWrapper">
       <div class="me">
         <h3 class=subHeader>Who Am I?</h3>
@@ -82,10 +82,10 @@
   </div>
 
   <div class="portfolio">
-    <img src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg" alt="portfolio">
+    <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg" alt="portfolio">
     <div class="portfolioGrid">
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg" alt="lumbar yard">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg" alt="lumbar yard">
         <p class="text">E-commerce site for mattress company, The Lumbar Yard.  The site allows users to search for and buy mattresses with any major credit card.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Express.js</p>
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, and Google Maps API</p>
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg" alt="hans boathouse">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg" alt="hans boathouse">
         <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Responsive layout created with CSS Grid.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
@@ -121,7 +121,7 @@
         </div>
       </div>
         <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg" alt="retro youtube tv">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg" alt="retro youtube tv">
         <p class="text">Want to channel surf with YouTube videos? Now you can with the Retro YouTube Television! Each channel plays a different category of video. Check the channel guide for complete lineup.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and YouTube API</p>
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
         <p class="text">Allows you to see all of the lastest news in one place. The dynamic newspaper will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and News API</p>
@@ -143,7 +143,7 @@
   </div>
 
   <div class="contact">
-    <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg" alt="contact">
+    <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg" alt="contact">
     <div class="contactWrapper">
       <div class="contactText">Find me at the following places:</div>
       <div class="contactIcons">
@@ -155,7 +155,7 @@
       <div class="contactText">Reach me at:</div>
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
-    <img class="arrow" src="https://www.jarrodyellets.com/images/arrow.png" alt="arrow">
+    <img class="arrow" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/arrow.png" alt="arrow">
   </div>
 
   <footer>
@@ -163,15 +163,16 @@
         <p>&copy; Jarrod Yellets | 2018</p>
     </div>
    </footer>
+   
   <noscript>Your browser must run JavaScript to view this page.</noscript>
   <script>
-  function init() {
-  var imgDefer = document.getElementsByTagName('img');
-  for (var i=0; i<imgDefer.length; i++) {
-  if(imgDefer[i].getAttribute('data-src')) {
-  imgDefer[i].setAttribute('src',imgDefer[i].getAttribute('data-src'));
-  } } }
-  window.onload = init;
+    function init() {
+    var imgDefer = document.getElementsByTagName('img');
+    for (var i=0; i<imgDefer.length; i++) {
+    if(imgDefer[i].getAttribute('data-src')) {
+    imgDefer[i].setAttribute('src',imgDefer[i].getAttribute('data-src'));
+    } } }
+    window.onload = init;
   </script>
 </body>
 </html>
