--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a id="portfolio" class="links hvr-pop">Portfolio</a>
           <a id="contact" class="links hvr-pop">Contact</a>
         </div>
-        <a href="javascript:void(0);" 
+        <a href="javascript:void(0);"
          class="hamburger"><i class="fas fa-bars" aria-label="hamburger"></i></a>
       </div>
     </div>
@@ -54,7 +54,7 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
           </p>
         </div>
       </div>
@@ -163,7 +163,7 @@
         <p>&copy; Jarrod Yellets | 2018</p>
     </div>
    </footer>
-   
+
   <noscript>Your browser must run JavaScript to view this page.</noscript>
   <script>
     function init() {
