Fixed Met Bugle des

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.
           </p>
         </div>
       </div>
@@ -131,7 +131,7 @@
       </div>
       <div class="portfolioItem">
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
-        <p class="text">Allows you to see all of the lastest news in one place. The dynamic newspaper will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
+        <p class="text">Allows you to see all of the lastest news in one place. The Metropolis Bugle will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and News API</p>
         <div className="buttonWrapper">
