--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.
           </p>
         </div>
       </div>
@@ -71,7 +71,7 @@
           <div class="toolsRight">
             <div class="stackText">JavaScript</div>
             <div class="stackText">React</div>
-            <div class="stackText">Node</div>
+            <div class="stackText">Node.js</div>
             <div class="stackText">mongoDB</div>
             <div class="stackText">express.js</div>
           </div>
@@ -88,7 +88,7 @@
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg" alt="lumbar yard">
         <p class="text">E-commerce site for mattress company, The Lumbar Yard.  The site allows users to search for and buy mattresses with any major credit card.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Express.js</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node.js, and Express.js</p>
         <div className="buttonWrapper">
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/lumbarYard" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
@@ -97,7 +97,7 @@
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg" alt="pillow real estate">
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent. The design is based on Zillow.com.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, and Google Maps API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node.js, Express.js, and Google Maps API</p>
         <div className="buttonWrapper">
           <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
@@ -115,7 +115,7 @@
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg" alt="top ten jukebox">
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node.js, Express.js, and Spotify API</p>
         <div className="buttonWrapper">
           <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
