Added nav hover

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
         <div class="navLinks">
           <a href="javascript:void(0)" class="closeBtn" aria-label="close button"><i class="fas fa-times"></i></a>
-          <a id="about" class="links hvr-pop">About</a>
-          <a id="portfolio" class="links hvr-pop">Portfolio</a>
-          <a id="contact" class="links hvr-pop">Contact</a>
+          <a id="about" class="links">About</a>
+          <a id="portfolio" class="links">Portfolio</a>
+          <a id="contact" class="links">Contact</a>
         </div>
         <a href="javascript:void(0);"
          class="hamburger"><i class="fas fa-bars" aria-label="hamburger"></i></a>
