Fixed mail icon margin

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="nav-bar">
       <div class="linksWrapper">
         <div class="navIcons">
-          <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" aria-label="mail-icon"><i class="fa fa-envelope" aria-hidden="true" itemprop="mail icon"></i></i></a>
+          <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" id="mail-icon" aria-label="mail-icon"><i class="fa fa-envelope" aria-hidden="true" itemprop="mail icon"></i></i></a>
           <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="github-icon"><i class="fab fa-github" itemprop="github icon"></i></a>
           <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="codepen-icon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
           <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="twitter-icon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
