Added accent to padme

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling Europe with my wife and daughter.
           </p>
         </div>
       </div>
