Added mail link hover

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
       </div>
       <div class="contactText">Reach me at:</div>
-      <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
+      <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail mail-underline" aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
     <img class="arrow" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/arrow.png" alt="arrow">
   </div>
