Added social hover

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
     <div class="contactWrapper">
       <div class="contactText">Find me at the following places:</div>
       <div class="contactIcons">
-        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="githubIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/github.png" alt="github"></a>
-        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="codepenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/codepen.png" alt="codepen"></a>
-        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="twitterIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/twitter.png" alt="twitter"></a>
-        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
+        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact social-hover" aria-label="githubIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/github.png" alt="github"></a>
+        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menuContact social-hover" aria-label="codepenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/codepen.png" alt="codepen"></a>
+        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact social-hover" aria-label="twitterIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/twitter.png" alt="twitter"></a>
+        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact social-hover" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
       </div>
       <div class="contactText">Reach me at:</div>
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail mail-underline" aria-label="email">jarrod@jarrodyellets.com</a>
