--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="stackText">React</div>
             <div class="stackText">Node.js</div>
             <div class="stackText">mongoDB</div>
-            <div class="stackText">express.js</div>
+            <div class="stackText">Express.js</div>
           </div>
         </div>
       </div>
