Added dashes to about

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
         <h3 class="subHeader">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
-            <div class="stackText">HTML5</div>
-            <div class="stackText">CSS3</div>
-            <div class="stackText">Sass</div>
-            <div class="stackText">jQuery</div>
-            <div class="stackText">Git</div>
+            <div class="stackText">-HTML5</div>
+            <div class="stackText">-CSS3</div>
+            <div class="stackText">-Sass</div>
+            <div class="stackText">-jQuery</div>
+            <div class="stackText">-Git</div>
           </div>
           <div class="toolsRight">
-            <div class="stackText">JavaScript</div>
-            <div class="stackText">React</div>
-            <div class="stackText">Node.js</div>
-            <div class="stackText">mongoDB</div>
-            <div class="stackText">Express.js</div>
+            <div class="stackText">-JavaScript</div>
+            <div class="stackText">-React</div>
+            <div class="stackText">-Node.js</div>
+            <div class="stackText">-mongoDB</div>
+            <div class="stackText">-Express.js</div>
           </div>
         </div>
       </div>
