--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
         <h3 class="subHeader">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
-            <div class="stackText">-&#x2060;HTML5</div>
-            <div class="stackText">-&#x2060;CSS3</div>
-            <div class="stackText">-&#x2060;Sass</div>
-            <div class="stackText">-&#x2060;jQuery</div>
-            <div class="stackText">-&#x2060;Git</div>
+            <div class="stackText" id="stack1">-&#x2060;HTML5</div>
+            <div class="stackText" id="stack2">-&#x2060;CSS3</div>
+            <div class="stackText" id="stack3">-&#x2060;Sass</div>
+            <div class="stackText" id="stack4">-&#x2060;jQuery</div>
+            <div class="stackText" id="stack5">-&#x2060;Git</div>
           </div>
           <div class="toolsRight">
-            <div class="stackText">-&#x2060;JavaScript</div>
-            <div class="stackText">-&#x2060;React</div>
-            <div class="stackText">-&#x2060;Node.js</div>
-            <div class="stackText">-&#x2060;mongoDB</div>
-            <div class="stackText">-&#x2060;Express.js</div>
+            <div class="stackText" id="stack6">-&#x2060;JavaScript</div>
+            <div class="stackText" id="stack7">-&#x2060;React</div>
+            <div class="stackText" id="stack8">-&#x2060;Node.js</div>
+            <div class="stackText" id="stack9">-&#x2060;mongoDB</div>
+            <div class="stackText" id="stack10">-&#x2060;Express.js</div>
           </div>
         </div>
       </div>
