--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h3 class="subHeader">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
-            <div class="stackText stack-hash width" id="stack1">HTML5</div>
+            <div class="stackText stack-hash" id="stack1">HTML5</div>
             <div class="stackText stack-hash" id="stack2">CSS3</div>
             <div class="stackText stack-hash" id="stack3">Sass</div>
             <div class="stackText stack-hash" id="stack4">jQuery</div>
